--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Methodology Assignment 5
-description: A website for DSC180A methodology assignment.
+description: Methodology Assignment 5
